The navbar is done

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -32,9 +32,9 @@
         width: 100%;
         margin-left: 5px;
 
-        &:focus {
-          //   border-bottom: 2px solid red;
-        }
+        // &:focus {
+        //   //   border-bottom: 2px solid red;
+        // }
       }
     }
   }
