--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -31,6 +31,7 @@
         padding: 5px;
         width: 100%;
         margin-left: 5px;
+        background-color: $white;
 
         // &:focus {
         //   //   border-bottom: 2px solid red;
