--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -16,8 +16,14 @@
     bottom: 0;
     margin: auto;
     cursor: pointer;
+    transition-duration: 1s;
     opacity: 0.5;
+
     @include verticalCenter;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 
   .arrowLeft {
@@ -31,7 +37,6 @@
   .wrapperSlider {
     width: 100vw;
     height: 100vh;
-    background: blue;
 
     .slideSlider {
       display: flex;
@@ -40,15 +45,47 @@
 
       .imgContainerSlider {
         flex: 1;
+        height: 100%;
 
         img {
+          width: 100%;
           height: 100%;
-          overflow: hidden;
+          object-fit: cover;
+          object-position: top;
         }
       }
 
       .infoContainerSlider {
         flex: 1;
+
+        h1 {
+          margin: 0 0 50px 50px;
+        }
+
+        .descriptionSlider {
+          margin: 10px 0 25px 50px;
+          letter-spacing: 3px;
+        }
+
+        button {
+          margin: 100px 0 25px 50px;
+          background: $color-4;
+          border: none;
+          width: 150px;
+          padding: 20px 30px 20px 30px;
+          border-radius: 8px;
+          font-weight: 500;
+          transition-duration: 1s;
+          box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
+            rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+            rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
+            rgba(0, 0, 0, 0.07) 0px 32px 64px;
+          cursor: pointer;
+
+          &:hover {
+            background: $white;
+          }
+        }
       }
     }
   }
