--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -1,93 +1,67 @@
-.sliderContainer {
+.container {
   width: 100%;
   height: 100vh;
   display: flex;
   position: relative;
   overflow: hidden;
 
-  .arrowLeft,
-  .arrowRight {
-    position: absolute;
+  .arrows {
     width: 50px;
     height: 50px;
-    background-color: $white;
+    background-color: #fff7f7;
     border-radius: 50%;
-    color: $black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
     top: 0;
     bottom: 0;
     margin: auto;
     cursor: pointer;
-    transition-duration: 1s;
     opacity: 0.5;
-
-    @include verticalCenter;
-
-    &:hover {
-      opacity: 1;
-    }
+    z-index: 2;
   }
 
-  .arrowLeft {
-    left: 10px;
-  }
-
-  .arrowRight {
-    right: 10px;
-  }
-
-  .wrapperSlider {
-    height: 100%;
+  .slide {
+    width: 100vw;
+    height: 100vh;
     display: flex;
+    align-items: center;
 
-    .slideSlider {
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-
-      .imgContainerSlider {
-        flex: 1;
-        height: 100%;
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          object-position: top;
-        }
+    .imgContainer {
+      width: 50%;
+      img {
+        height: 80%;
+        width: 100%;
       }
+    }
 
-      .infoContainerSlider {
-        flex: 1;
-
-        h1 {
-          margin: 0 0 50px 50px;
-        }
-
-        .descriptionSlider {
-          margin: 10px 0 25px 50px;
-          letter-spacing: 3px;
-        }
-
-        button {
-          margin: 100px 0 25px 50px;
-          background: $color-4;
-          border: none;
-          width: 150px;
-          padding: 20px 30px 20px 30px;
-          border-radius: 8px;
-          font-weight: 500;
-          transition-duration: 1s;
-          box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
-            rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
-            rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
-            rgba(0, 0, 0, 0.07) 0px 32px 64px;
-          cursor: pointer;
-
-          &:hover {
-            background: $white;
-          }
-        }
+    .infoContainer {
+      flex: 1;
+      padding: 50px;
+      .title {
+        font-size: 70px;
+      }
+      .description {
+        margin: 50px 0px;
+        font-size: 20px;
+        font-weight: 500;
+        letter-spacing: 3px;
+      }
+      button {
+        margin: 100px 0 25px 0;
+        background: $color-4;
+        border: none;
+        width: 150px;
+        padding: 20px 30px 20px 30px;
+        border-radius: 8px;
+        font-weight: 500;
+        transition-duration: 1s;
+        box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
+          rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+          rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
+          rgba(0, 0, 0, 0.07) 0px 32px 64px;
+        cursor: pointer;
       }
     }
   }
