--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,5 @@
 @import "./components/navbar";
 @import "./components/announcement";
 @import "./components/slider";
+@import "./components/categoryItem.scss";
+@import "./components/categories";
