add articles in products section

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,5 @@
 @import "./components/slider";
 @import "./components/categoryItem.scss";
 @import "./components/categories";
+@import "./components/products";
+@import "./components/product";
