--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -1,18 +1,56 @@
 .containerProduct {
   flex: 1;
   margin: 5px;
-  min-width: 280px;
+  min-width: 400px;
   height: 350px;
+  background: lightgray;
+  position: relative;
+  display: flex;
+  justify-content: center;
 
-  .circle {
-  }
+  .item {
+    margin-top: -60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  img {
-    height: 75%;
+    .circle {
+      position: relative;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      background-color: white;
+    }
+
+    img {
+      position: absolute;
+      height: 250px;
+      z-index: 2;
+    }
   }
 
   .infos {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    cursor: pointer;
+    z-index: 3;
+
     .icon {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 10px;
+      transition: all 0.5s ease;
+
+      &:hover {
+        background-color: #e9f5f5;
+        transform: scale(1.1);
+      }
     }
   }
 }
