--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,4 @@
 @import "./components/categories";
 @import "./components/products";
 @import "./components/product";
+@import "./components/Newsletter";
