footer is done so main page is over

--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -3,7 +3,7 @@
   margin: 5px;
   min-width: 400px;
   height: 350px;
-  background: lightgray;
+  background: #f1faee;
   position: relative;
   display: flex;
   justify-content: center;
