--- a/src/styles/components/_Newsletter.scss
+++ b/src/styles/components/_Newsletter.scss
@@ -1,6 +1,6 @@
 .containerNewsletter {
   height: 60vh;
-  background: #fcf5f5;
+  background: #f7ede2;
   display: flex;
   align-items: center;
   justify-content: center;
