--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,4 @@
 @import "./components/products";
 @import "./components/product";
 @import "./components/Newsletter";
+@import "./components/Footer";
