add productlist page then differents kind of filters

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,4 @@
 @import "./components/product";
 @import "./components/Newsletter";
 @import "./components/Footer";
+@import "./pages/components/ProductList";
