product page in construction, add title, desc, price, size then need ton add different colors

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,4 @@
 @import "./components/Newsletter";
 @import "./components/Footer";
 @import "./pages/components/ProductList";
+@import "./pages/components/Product";
